<resources>
    <string name="app_name">GitHub Hands</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //menu
    <string name="action_setting">Settings</string>
    <string name="action_search">search</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="collection">Collection</string>
    <string name="trending_repository">Trending repository</string>
    <string name="repository">Repository</string>
    <string name="trending_developers">Trending developers</string>
    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="edit_language">Edit repo language</string>
    <string name="feedback">Feedback</string>
    <string name="trending_daily">Trending daily</string>
    <string name="trending_weekly">Trending weekly</string>
    <string name="trending_monthly">Trending monthly</string>

    <string name="setting">Setting</string>


    <string name="login_with_github">Login with GitHub.</string>
    <string name="repository_daily">Repository daily</string>
    <string name="repository_weekly">Repository weekly</string>
    <string name="repository_monthly">Repository monthly</string>
    <string name="developer_daily">Developer daily</string>
    <string name="developer_weekly">Developer weekly</string>
    <string name="developer_monthly">Developer monthly</string>
    <string name="collection_repository">Collection repository</string>
    <string name="collection_developer">Collection developer</string>
    <string name="trending">Trending</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="built_by">Built By</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
