<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_trending_repositories"
            android:icon="@drawable/repository"
            android:title="@string/trending_repository"/>

        <item
            android:id="@+id/nav_trending_developers"
            android:icon="@drawable/developer"
            android:title="@string/trending_developers"/>

        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/collection_heart"
            android:title="@string/collection"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/feedback"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />

</menu>
